<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Space Dock</string>

    <!-- Labels for configuration slots in each ship -->
    <string name="flagship_slot">Flagship</string>
    <string name="fleetcaptain_slot">Fleet Captain</string>
    <string name="admiral_slot">Admiral</string>
    <string name="captain_slot">Captain</string>
    <string name="ship_slot">Ship</string>
    <string name="crew_slot">Crew</string>
    <string name="weapon_slot">Weaponry</string>
    <string name="tech_slot">Tech</string>
    <string name="borg_slot">Borg</string>
    <string name="talent_slot">Talent</string>
    <string name="squadron_slot">Squadron</string>
    <string name="officer_slot">Officer</string>

    <string name="add_ship">Add ship</string>
    <string name="clear_upgrade_slot">Clear upgrade slot</string>
    <string name="empty_upgrade_slot">EMPTY SLOT</string>

    <string name="indicator_not_applicable">-</string>
    <string name="indicator_unique">*</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_update">Check for Data Update</string>
    <string name="menu_loadupdate">Load Game Data Update</string>
    <string name="menu_create_squad">Create Squad</string>
    <string name="menu_share_all_squads">Share All Squads</string>
    <string name="menu_share_squad">Share Squad</string>
    <string name="menu_copy_squad">Duplicate Squad</string>
    <string name="menu_edit_squad">Edit Squad</string>
    <string name="menu_rename_squad">Rename Squad</string>
    <string name="menu_delete_squad">Delete Squad</string>
    <string name="menu_additional_points">Edit Additional Points</string>
    <string name="menu_notes">Edit Notes</string>

    <string name="dialog_request_squad_name">Squad Name</string>
    <string name="dialog_accept">OK</string>
    <string name="dialog_reject">Cancel</string>
    <string name="dialog_error_empty_squad_name">Squad name must not be empty.</string>
    <string name="dialog_additional_points">Additional Points</string>
    <string name="dialog_error_nan">Additional points must be a number.</string>
    <string name="dialog_notes">Notes</string>

    <string name="title_settings">Settings</string>

    <!-- Preferences -->
    <string name="pref_title_show_item_details">Show item details</string>
    <string name="pref_summary_show_item_details">Display as much item info as possible in lists.</string>
    <string name="pref_title_set_selection">Select enabled expansions</string>
    <string name="pref_summary_set_selection">Only items from the selected expansions are shown in the app.</string>
    <string name="pref_title_auto_add_new_sets">Auto enable new expansions</string>
    <string name="pref_summary_auto_add_new_sets">On update, newly available expansions will be enabled automatically.</string>
    <string name="pref_title_check_updates">Check for Game Data Updates on Launch</string>
    <string name="pref_summary_check_updates">Check online for updated Game Data when launching the app.</string>

    <string name="toast_invalid_set_selection">Set selection invalid. You must select at least one set to display.</string>

    <!-- Root action bar tabs -->
    <string-array name="root_tab_labels">
        <item>My Fleet</item>
        <item>Library</item>
    </string-array>

    <!-- Squad action bar tabs -->
    <string-array name="squad_tab_labels">
        <item>Inspect</item>
        <item>Build</item>
    </string-array>

    <!-- List displayed in the Browse fragment so that the pluralization is correct and they are in the same order as other versions of Space Dock -->
    <string-array name="browse_items_list">
        <item>Ships</item>
        <item>Admirals</item>
        <item>Captains</item>
        <item>Crew</item>
        <item>Talents</item>
        <item>Tech</item>
        <item>Borg</item>
        <item>Weapons</item>
        <item>Resources</item>
        <item>Flagships</item>
        <item>Fleet Captains</item>
        <item>Reference</item>
        <item>Expansions</item>
        <item>Squadrons</item>
    </string-array>
    <string-array name="empty"/>
    <string name="faction">Faction</string>
    <string name="all_factions">All Factions</string>
    <string name="no_resource">No resource</string>
    <string name="save_all_squads_to">Save all squads to:</string>
    <string name="all_squads_spacedocksquads">all_squads_exported.spacedocksquads</string>
    <string name="save_broken_squads_to">Save corrupt squads to:</string>
    <string name="broken_spacedocksquads">broken.spacedocksquads</string>
    <string name="menu_printfleet">Print Fleet Build</string>
    <string name="fullname">Name</string>
    <string name="emailaddress">Email</string>
    <string name="eventname">Event</string>
    <string name="factionlabel">Faction</string>
    <string name="eventdate">Date</string>
    <string name="print">Print</string>
    <string name="blindbuy_on">Event Uses Blind Boosters</string>
    <string name="blindbuy_off">This Event Does Not Use Blind Boosters</string>
</resources>
