<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="pref_key_show_details"
        android:title="@string/pref_title_show_item_details"
        android:summary="@string/pref_summary_show_item_details"
        android:defaultValue="true" />
    <CheckBoxPreference
        android:key="pref_key_auto_add_new_sets"
        android:title="@string/pref_title_auto_add_new_sets"
        android:summary="@string/pref_summary_auto_add_new_sets"
        android:defaultValue="true" />
    <CheckBoxPreference
        android:key="pref_key_check_updates"
        android:title="@string/pref_title_check_updates"
        android:summary="@string/pref_summary_check_updates"
        android:defaultValue="true" />
    <com.funnyhatsoftware.spacedock.SetPreference
        android:defaultValue="@array/empty"
        android:key="pref_key_set_id_selection"
        android:title="@string/pref_title_set_selection"
        android:summary="@string/pref_summary_set_selection" />
</PreferenceScreen>