<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_action_discard"
        android:showAsAction="ifRoom"
        android:title="@string/menu_delete_squad"
        android:visible="true"/>
    <item
        android:id="@+id/menu_rename"
        android:showAsAction="never"
        android:title="@string/menu_rename_squad"
        android:visible="true"/>
    <item
        android:id="@+id/menu_additional_points"
        android:showAsAction="never"
        android:title="@string/menu_additional_points"
        android:visible="true"/>
    <item
        android:id="@+id/menu_notes"
        android:showAsAction="never"
        android:title="@string/menu_notes"
        android:visible="true"/>

</menu>
