<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fullname" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLength="26"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/emailaddress"
        android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
        android:text="@string/emailaddress" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLength="26"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/eventname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventname" />

    <EditText
        android:id="@+id/event_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLength="26"
        android:inputType="text" />

    <TextView
        android:id="@+id/faction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/factionlabel" />

    <EditText
        android:id="@+id/faction_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLength="26"
        android:inputType="text" />

    <TextView
        android:id="@+id/eventdate_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventdate" />

    <DatePicker
        android:id="@+id/event_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:calendarViewShown="false" />

</LinearLayout>
